Change spell-form-classes-section height attribute to min-height to fix clipping bug when too many classes were added

--- a/app/assets/stylesheets/spellbook.css
+++ b/app/assets/stylesheets/spellbook.css
@@ -391,7 +391,7 @@
 }
 
 #spell-form-classes-section {
-    height: 4em;
+    min-height: 4em;
     box-sizing: border-box;
     display: flex;
     align-items: center;
